# pmic-pcb

./: .gitignore  .gitigonre  README.md  elastic_power_module.kicad_pcb  elastic_power_module.kicad_prl  elastic_power_module.kicad_sch  fp-info-cache  voltage_board.kicad_pcb  voltage_board.kicad_prl  voltage_board.kicad_pro  voltage_board.kicad_sch  ~voltage_board.kicad_sch.lck
bom/: elastic_power_module.csv  ibom.html
datasheets/: Xmodem协议 _ 靡不有初，鲜克有终.html
datasheets/Xmodem协议 _ 靡不有初，鲜克有终_files/: article-detection.20231221-6-RELEASE.es6.js  busuanzi  city.html  comment.zero.css  comment.zero.zh-cn.dist.js  distance-from-article.20231221-6-RELEASE.es6.js  google-topics-api.20231221-6-RELEASE.es6.js  impl.20231221-6-RELEASE.js  loader.js  saved_resource(1).html  sync  userx.20231221-6-RELEASE.es6.js
pcb_test_code/: .gitignore  CMakeLists.txt
pcb_test_code/app/: i2c_bus_scan.c  test_max77654.c
pcb_test_code/pmic_lib/: CMakeLists.txt  max77654.c  max77654.h  max77654_types.h
pcb_test_code/usb_dual_cdc_lib/: CMakeLists.txt  test_usb_dual_cdc.c  test_usb_dual_cdc_stdio.c  tusb_config.h  usb_descriptors.c  usb_dual_cdc.c  usb_dual_cdc.h  usb_stdio_cdc.c  usb_stdio_cdc.h
